parser.output
Grammar

    0 $accept: file $end

    1 file: file_input

    2 file_input: snippet

    3 snippet: NEWLINE
    4        | stmt
    5        | NEWLINE snippet
    6        | stmt snippet

    7 funcdef: DEF NAME parameters COLON func_body_suite
    8        | DEF NAME parameters ARROW_OPER TYPE_HINT COLON func_body_suite
    9        | DEF NAME OPEN_BRACKET CLOSE_BRACKET ARROW_OPER TYPE_HINT COLON func_body_suite
   10        | DEF NAME OPEN_BRACKET CLOSE_BRACKET COLON func_body_suite

   11 parameters: OPEN_BRACKET typedargslist CLOSE_BRACKET

   12 typedargslist: typedarg
   13              | typedargslist COMMA typedarg

   14 typedarg: tfpdef
   15         | tfpdef EQUAL test

   16 tfpdef: NAME
   17       | NAME COLON TYPE_HINT

   18 stmt: simple_stmt
   19     | compound_stmt

   20 simple_stmt: small_stmt_list SEMI_COLON NEWLINE
   21            | small_stmt_list NEWLINE

   22 small_stmt_list: small_stmt
   23                | small_stmt_list SEMI_COLON small_stmt

   24 small_stmt: expr_stmt
   25           | flow_stmt
   26           | global_stmt
   27           | nonlocal_stmt
   28           | assert_stmt

   29 expr_stmt: testlist_star_expr annassign
   30          | testlist_star_expr augassign testlist
   31          | eq_testlist_star_expr_plus

   32 eq_testlist_star_expr_plus: testlist_star_expr
   33                           | testlist_star_expr EQUAL eq_testlist_star_expr_plus

   34 annassign: COLON test
   35          | COLON test EQUAL testlist_star_expr

   36 testlist_star_expr: expr_choice_list
   37                   | expr_choice_list COMMA

   38 expr_choice_list: expr_choice
   39                 | expr_choice_list COMMA expr_choice

   40 expr_choice: test
   41            | star_expr

   42 augassign: ASSIGN_OPERATOR

   43 flow_stmt: break_stmt
   44          | continue_stmt
   45          | return_stmt

   46 break_stmt: BREAK

   47 continue_stmt: CONTINUE

   48 return_stmt: RETURN
   49            | RETURN testlist_star_expr

   50 global_stmt: GLOBAL NAME
   51            | GLOBAL NAME comma_name_star

   52 nonlocal_stmt: NONLOCAL NAME
   53              | NONLOCAL NAME comma_name_star

   54 assert_stmt: ASSERT test
   55            | ASSERT test comma_test

   56 comma_name_star: COMMA NAME
   57                | COMMA NAME comma_name_star

   58 compound_stmt: if_stmt
   59              | while_stmt
   60              | for_stmt
   61              | funcdef
   62              | classdef
   63              | async_stmt

   64 async_stmt: ASYNC async_choice

   65 async_choice: funcdef
   66             | for_stmt

   67 if_stmt: IF namedexpr_test COLON suite
   68        | IF namedexpr_test COLON suite ELSE COLON suite
   69        | IF namedexpr_test COLON suite nts_star
   70        | IF namedexpr_test COLON suite nts_star ELSE COLON suite

   71 while_stmt: WHILE namedexpr_test COLON suite
   72           | WHILE namedexpr_test COLON suite ELSE COLON suite

   73 for_stmt: FOR exprlist IN testlist COLON suite
   74         | FOR exprlist IN testlist COLON suite ELSE COLON suite

   75 suite: simple_stmt
   76      | NEWLINE INDENT stmt_plus DEDENT
   77      | NEWLINE INDENT stmt_plus NEWLINE DEDENT

   78 nts_star: ELIF namedexpr_test COLON suite
   79         | ELIF namedexpr_test COLON suite nts_star

   80 namedexpr_test: test

   81 test: or_test
   82     | or_test IF or_test ELSE test

   83 or_test: and_test
   84        | and_test_star OR and_test

   85 and_test_star: and_test_star OR and_test
   86              | and_test

   87 and_test: not_test
   88         | not_test_star AND not_test

   89 not_test_star: not_test_star AND not_test
   90              | not_test

   91 not_test: NOT not_test
   92         | comparison

   93 comparison: expr
   94           | expr comp_op comparison

   95 comp_op: LESS_THAN
   96        | GREATER_THAN
   97        | EQUAL_EQUAL
   98        | GREATER_THAN_EQUAL
   99        | LESS_THAN_EQUAL
  100        | NOT_EQUAL_ARROW
  101        | NOT_EQUAL
  102        | IN
  103        | NOT IN
  104        | IS
  105        | IS NOT

  106 star_expr: MULTIPLY expr

  107 expr: xor_expr
  108     | xor_expr BIT_OR expr

  109 xor_expr: and_expr
  110         | and_expr BIT_XOR xor_expr

  111 and_expr: shift_expr
  112         | shift_expr BIT_AND and_expr

  113 shift_expr: arith_expr
  114           | arith_expr SHIFT_OPER shift_expr

  115 arith_expr: term
  116           | arith_expr PLUS term
  117           | arith_expr MINUS term

  118 term: factor
  119     | term term_choice factor

  120 term_choice: MULTIPLY
  121            | ATTHERATE
  122            | DIVIDE
  123            | REMAINDER
  124            | FLOOR_DIV_OPER

  125 factor: factor_choice factor
  126       | power

  127 factor_choice: PLUS
  128              | MINUS
  129              | NEGATION

  130 power: atom_expr
  131      | atom_expr POWER_OPERATOR factor

  132 atom_expr: atom
  133          | atom_expr trailer
  134          | atom_expr DOT NAME

  135 atom: OPEN_BRACKET testlist_comp CLOSE_BRACKET
  136     | OPEN_BRACKET CLOSE_BRACKET
  137     | SQUARE_OPEN testlist_comp SQUARE_CLOSE
  138     | SQUARE_OPEN SQUARE_CLOSE
  139     | CURLY_OPEN dictorsetmaker CURLY_CLOSE
  140     | CURLY_OPEN CURLY_CLOSE
  141     | NAME
  142     | NUMBER
  143     | STRING_PLUS
  144     | ATOM_KEYWORDS
  145     | TYPE_HINT

  146 STRING_PLUS: STRING
  147            | STRING STRING_PLUS

  148 testlist_comp: named_or_star comp_for
  149              | named_or_star_list
  150              | named_or_star_list COMMA

  151 named_or_star_list: named_or_star
  152                   | named_or_star_list COMMA named_or_star

  153 named_or_star: namedexpr_test
  154              | star_expr

  155 trailer: OPEN_BRACKET CLOSE_BRACKET
  156        | OPEN_BRACKET arglist CLOSE_BRACKET
  157        | SQUARE_OPEN subscriptlist SQUARE_CLOSE

  158 subscriptlist: subscriptlist_list
  159              | subscriptlist_list COMMA

  160 subscriptlist_list: subscript
  161                   | subscriptlist_list COMMA subscript

  162 subscript: test
  163          | COLON
  164          | COLON test
  165          | test COLON
  166          | test COLON test

  167 exprlist: expr_or_star_expr_list
  168         | expr_or_star_expr_list COMMA

  169 expr_or_star_expr_list: expr_or_star_expr
  170                       | expr_or_star_expr_list COMMA expr_or_star_expr

  171 expr_or_star_expr: expr
  172                  | star_expr

  173 testlist: testlist_list
  174         | testlist_list COMMA

  175 testlist_list: test
  176              | testlist_list COMMA test

  177 dictorsetmaker: A comp_for
  178               | A_list
  179               | A_list COMMA
  180               | B comp_for
  181               | B_list
  182               | B_list COMMA

  183 A: test COLON test
  184  | POWER_OPERATOR expr

  185 A_list: A
  186       | A_list COMMA A

  187 B: test
  188  | star_expr

  189 B_list: B
  190       | B_list COMMA B

  191 classdef: CLASS NAME COLON suite
  192         | CLASS NAME OPEN_BRACKET CLOSE_BRACKET COLON suite
  193         | CLASS NAME OPEN_BRACKET arglist CLOSE_BRACKET COLON suite

  194 arglist: argument_list
  195        | argument_list COMMA

  196 argument_list: argument
  197              | argument_list COMMA argument

  198 argument: test
  199         | test comp_for
  200         | test EQUAL test
  201         | POWER_OPERATOR test
  202         | MULTIPLY test

  203 comp_iter: comp_for
  204          | comp_if

  205 sync_comp_for: FOR exprlist IN or_test
  206              | FOR exprlist IN or_test comp_iter

  207 comp_for: sync_comp_for
  208         | ASYNC sync_comp_for

  209 comp_if: IF or_test
  210        | IF or_test comp_iter

  211 func_body_suite: simple_stmt
  212                | NEWLINE INDENT stmt_plus DEDENT
  213                | NEWLINE INDENT stmt_plus NEWLINE DEDENT

  214 stmt_plus: stmt
  215          | stmt stmt_plus

  216 comma_test: COMMA test


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NEWLINE <val> (258) 3 5 20 21 76 77 212 213
    ASYNC <val> (259) 64 208
    INDENT <val> (260) 76 77 212 213
    DEDENT <val> (261) 76 77 212 213
    ASSIGN_OPERATOR <val> (262) 42
    POWER_OPERATOR <val> (263) 131 184 201
    SHIFT_OPER <val> (264) 114
    FLOOR_DIV_OPER <val> (265) 124
    ARROW_OPER <val> (266) 8 9
    TYPE_HINT <val> (267) 8 9 17 145
    NAME <val> (268) 7 8 9 10 16 17 50 51 52 53 56 57 134 141 191 192 193
    IF <val> (269) 67 68 69 70 82 209 210
    ELSE <val> (270) 68 70 72 74 82
    ELIF <val> (271) 78 79
    WHILE <val> (272) 71 72
    FOR <val> (273) 73 74 205 206
    IN <val> (274) 73 74 102 103 205 206
    AND <val> (275) 88 89
    OR <val> (276) 84 85
    NOT <val> (277) 91 103 105
    BREAK <val> (278) 46
    CONTINUE <val> (279) 47
    RETURN <val> (280) 48 49
    CLASS <val> (281) 191 192 193
    DEF <val> (282) 7 8 9 10
    GLOBAL <val> (283) 50 51
    NONLOCAL <val> (284) 52 53
    ASSERT <val> (285) 54 55
    ATOM_KEYWORDS <val> (286) 144
    STRING <val> (287) 146 147
    NUMBER <val> (288) 142
    OPEN_BRACKET <val> (289) 9 10 11 135 136 155 156 192 193
    CLOSE_BRACKET <val> (290) 9 10 11 135 136 155 156 192 193
    EQUAL <val> (291) 15 33 35 200
    SEMI_COLON <val> (292) 20 23
    COLON <val> (293) 7 8 9 10 17 34 35 67 68 69 70 71 72 73 74 78 79 163 164 165 166 183 191 192 193
    COMMA <val> (294) 13 37 39 56 57 150 152 159 161 168 170 174 176 179 182 186 190 195 197 216
    PLUS <val> (295) 116 127
    MINUS <val> (296) 117 128
    MULTIPLY <val> (297) 106 120 202
    DIVIDE <val> (298) 122
    REMAINDER <val> (299) 123
    ATTHERATE <val> (300) 121
    NEGATION <val> (301) 129
    BIT_AND <val> (302) 112
    BIT_OR <val> (303) 108
    BIT_XOR <val> (304) 110
    DOT <val> (305) 134
    CURLY_OPEN <val> (306) 139 140
    CURLY_CLOSE <val> (307) 139 140
    SQUARE_OPEN <val> (308) 137 138 157
    SQUARE_CLOSE <val> (309) 137 138 157
    LESS_THAN <val> (310) 95
    GREATER_THAN <val> (311) 96
    EQUAL_EQUAL <val> (312) 97
    GREATER_THAN_EQUAL <val> (313) 98
    LESS_THAN_EQUAL <val> (314) 99
    NOT_EQUAL_ARROW <val> (315) 100
    NOT_EQUAL <val> (316) 101
    IS <val> (317) 104 105


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    file <val> (64)
        on left: 1
        on right: 0
    file_input <val> (65)
        on left: 2
        on right: 1
    snippet <val> (66)
        on left: 3 4 5 6
        on right: 2 5 6
    funcdef <val> (67)
        on left: 7 8 9 10
        on right: 61 65
    parameters <val> (68)
        on left: 11
        on right: 7 8
    typedargslist <val> (69)
        on left: 12 13
        on right: 11 13
    typedarg <val> (70)
        on left: 14 15
        on right: 12 13
    tfpdef <val> (71)
        on left: 16 17
        on right: 14 15
    stmt <val> (72)
        on left: 18 19
        on right: 4 6 214 215
    simple_stmt <val> (73)
        on left: 20 21
        on right: 18 75 211
    small_stmt_list <val> (74)
        on left: 22 23
        on right: 20 21 23
    small_stmt <val> (75)
        on left: 24 25 26 27 28
        on right: 22 23
    expr_stmt <val> (76)
        on left: 29 30 31
        on right: 24
    eq_testlist_star_expr_plus <val> (77)
        on left: 32 33
        on right: 31 33
    annassign <val> (78)
        on left: 34 35
        on right: 29
    testlist_star_expr <val> (79)
        on left: 36 37
        on right: 29 30 32 33 35 49
    expr_choice_list <val> (80)
        on left: 38 39
        on right: 36 37 39
    expr_choice <val> (81)
        on left: 40 41
        on right: 38 39
    augassign <val> (82)
        on left: 42
        on right: 30
    flow_stmt <val> (83)
        on left: 43 44 45
        on right: 25
    break_stmt <val> (84)
        on left: 46
        on right: 43
    continue_stmt <val> (85)
        on left: 47
        on right: 44
    return_stmt <val> (86)
        on left: 48 49
        on right: 45
    global_stmt <val> (87)
        on left: 50 51
        on right: 26
    nonlocal_stmt <val> (88)
        on left: 52 53
        on right: 27
    assert_stmt <val> (89)
        on left: 54 55
        on right: 28
    comma_name_star <val> (90)
        on left: 56 57
        on right: 51 53 57
    compound_stmt <val> (91)
        on left: 58 59 60 61 62 63
        on right: 19
    async_stmt <val> (92)
        on left: 64
        on right: 63
    async_choice <val> (93)
        on left: 65 66
        on right: 64
    if_stmt <val> (94)
        on left: 67 68 69 70
        on right: 58
    while_stmt <val> (95)
        on left: 71 72
        on right: 59
    for_stmt <val> (96)
        on left: 73 74
        on right: 60 66
    suite <val> (97)
        on left: 75 76 77
        on right: 67 68 69 70 71 72 73 74 78 79 191 192 193
    nts_star <val> (98)
        on left: 78 79
        on right: 69 70 79
    namedexpr_test <val> (99)
        on left: 80
        on right: 67 68 69 70 71 72 78 79 153
    test <val> (100)
        on left: 81 82
        on right: 15 34 35 40 54 55 80 82 162 164 165 166 175 176 183 187 198 199 200 201 202 216
    or_test <val> (101)
        on left: 83 84
        on right: 81 82 205 206 209 210
    and_test_star <val> (102)
        on left: 85 86
        on right: 84 85
    and_test <val> (103)
        on left: 87 88
        on right: 83 84 85 86
    not_test_star <val> (104)
        on left: 89 90
        on right: 88 89
    not_test <val> (105)
        on left: 91 92
        on right: 87 88 89 90 91
    comparison <val> (106)
        on left: 93 94
        on right: 92 94
    comp_op <val> (107)
        on left: 95 96 97 98 99 100 101 102 103 104 105
        on right: 94
    star_expr <val> (108)
        on left: 106
        on right: 41 154 172 188
    expr <val> (109)
        on left: 107 108
        on right: 93 94 106 108 171 184
    xor_expr <val> (110)
        on left: 109 110
        on right: 107 108 110
    and_expr <val> (111)
        on left: 111 112
        on right: 109 110 112
    shift_expr <val> (112)
        on left: 113 114
        on right: 111 112 114
    arith_expr <val> (113)
        on left: 115 116 117
        on right: 113 114 116 117
    term <val> (114)
        on left: 118 119
        on right: 115 116 117 119
    term_choice <val> (115)
        on left: 120 121 122 123 124
        on right: 119
    factor <val> (116)
        on left: 125 126
        on right: 118 119 125 131
    factor_choice <val> (117)
        on left: 127 128 129
        on right: 125
    power <val> (118)
        on left: 130 131
        on right: 126
    atom_expr <val> (119)
        on left: 132 133 134
        on right: 130 131 133 134
    atom <val> (120)
        on left: 135 136 137 138 139 140 141 142 143 144 145
        on right: 132
    STRING_PLUS <val> (121)
        on left: 146 147
        on right: 143 147
    testlist_comp <val> (122)
        on left: 148 149 150
        on right: 135 137
    named_or_star_list <val> (123)
        on left: 151 152
        on right: 149 150 152
    named_or_star <val> (124)
        on left: 153 154
        on right: 148 151 152
    trailer <val> (125)
        on left: 155 156 157
        on right: 133
    subscriptlist <val> (126)
        on left: 158 159
        on right: 157
    subscriptlist_list <val> (127)
        on left: 160 161
        on right: 158 159 161
    subscript <val> (128)
        on left: 162 163 164 165 166
        on right: 160 161
    exprlist <val> (129)
        on left: 167 168
        on right: 73 74 205 206
    expr_or_star_expr_list <val> (130)
        on left: 169 170
        on right: 167 168 170
    expr_or_star_expr <val> (131)
        on left: 171 172
        on right: 169 170
    testlist <val> (132)
        on left: 173 174
        on right: 30 73 74
    testlist_list <val> (133)
        on left: 175 176
        on right: 173 174 176
    dictorsetmaker <val> (134)
        on left: 177 178 179 180 181 182
        on right: 139
    A <val> (135)
        on left: 183 184
        on right: 177 185 186
    A_list <val> (136)
        on left: 185 186
        on right: 178 179 186
    B <val> (137)
        on left: 187 188
        on right: 180 189 190
    B_list <val> (138)
        on left: 189 190
        on right: 181 182 190
    classdef <val> (139)
        on left: 191 192 193
        on right: 62
    arglist <val> (140)
        on left: 194 195
        on right: 156 193
    argument_list <val> (141)
        on left: 196 197
        on right: 194 195 197
    argument <val> (142)
        on left: 198 199 200 201 202
        on right: 196 197
    comp_iter <val> (143)
        on left: 203 204
        on right: 206 210
    sync_comp_for <val> (144)
        on left: 205 206
        on right: 207 208
    comp_for <val> (145)
        on left: 207 208
        on right: 148 177 180 199 203
    comp_if <val> (146)
        on left: 209 210
        on right: 204
    func_body_suite <val> (147)
        on left: 211 212 213
        on right: 7 8 9 10
    stmt_plus <val> (148)
        on left: 214 215
        on right: 76 77 212 213 215
    comma_test <val> (149)
        on left: 216
        on right: 55


State 0

    0 $accept: . file $end

    NEWLINE        shift, and go to state 1
    ASYNC          shift, and go to state 2
    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    IF             shift, and go to state 5
    WHILE          shift, and go to state 6
    FOR            shift, and go to state 7
    NOT            shift, and go to state 8
    BREAK          shift, and go to state 9
    CONTINUE       shift, and go to state 10
    RETURN         shift, and go to state 11
    CLASS          shift, and go to state 12
    DEF            shift, and go to state 13
    GLOBAL         shift, and go to state 14
    NONLOCAL       shift, and go to state 15
    ASSERT         shift, and go to state 16
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    MULTIPLY       shift, and go to state 23
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    file                        go to state 27
    file_input                  go to state 28
    snippet                     go to state 29
    funcdef                     go to state 30
    stmt                        go to state 31
    simple_stmt                 go to state 32
    small_stmt_list             go to state 33
    small_stmt                  go to state 34
    expr_stmt                   go to state 35
    eq_testlist_star_expr_plus  go to state 36
    testlist_star_expr          go to state 37
    expr_choice_list            go to state 38
    expr_choice                 go to state 39
    flow_stmt                   go to state 40
    break_stmt                  go to state 41
    continue_stmt               go to state 42
    return_stmt                 go to state 43
    global_stmt                 go to state 44
    nonlocal_stmt               go to state 45
    assert_stmt                 go to state 46
    compound_stmt               go to state 47
    async_stmt                  go to state 48
    if_stmt                     go to state 49
    while_stmt                  go to state 50
    for_stmt                    go to state 51
    test                        go to state 52
    or_test                     go to state 53
    and_test_star               go to state 54
    and_test                    go to state 55
    not_test_star               go to state 56
    not_test                    go to state 57
    comparison                  go to state 58
    star_expr                   go to state 59
    expr                        go to state 60
    xor_expr                    go to state 61
    and_expr                    go to state 62
    shift_expr                  go to state 63
    arith_expr                  go to state 64
    term                        go to state 65
    factor                      go to state 66
    factor_choice               go to state 67
    power                       go to state 68
    atom_expr                   go to state 69
    atom                        go to state 70
    STRING_PLUS                 go to state 71
    classdef                    go to state 72


State 1

    3 snippet: NEWLINE .
    5        | NEWLINE . snippet

    NEWLINE        shift, and go to state 1
    ASYNC          shift, and go to state 2
    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    IF             shift, and go to state 5
    WHILE          shift, and go to state 6
    FOR            shift, and go to state 7
    NOT            shift, and go to state 8
    BREAK          shift, and go to state 9
    CONTINUE       shift, and go to state 10
    RETURN         shift, and go to state 11
    CLASS          shift, and go to state 12
    DEF            shift, and go to state 13
    GLOBAL         shift, and go to state 14
    NONLOCAL       shift, and go to state 15
    ASSERT         shift, and go to state 16
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    MULTIPLY       shift, and go to state 23
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    $default  reduce using rule 3 (snippet)

    snippet                     go to state 73
    funcdef                     go to state 30
    stmt                        go to state 31
    simple_stmt                 go to state 32
    small_stmt_list             go to state 33
    small_stmt                  go to state 34
    expr_stmt                   go to state 35
    eq_testlist_star_expr_plus  go to state 36
    testlist_star_expr          go to state 37
    expr_choice_list            go to state 38
    expr_choice                 go to state 39
    flow_stmt                   go to state 40
    break_stmt                  go to state 41
    continue_stmt               go to state 42
    return_stmt                 go to state 43
    global_stmt                 go to state 44
    nonlocal_stmt               go to state 45
    assert_stmt                 go to state 46
    compound_stmt               go to state 47
    async_stmt                  go to state 48
    if_stmt                     go to state 49
    while_stmt                  go to state 50
    for_stmt                    go to state 51
    test                        go to state 52
    or_test                     go to state 53
    and_test_star               go to state 54
    and_test                    go to state 55
    not_test_star               go to state 56
    not_test                    go to state 57
    comparison                  go to state 58
    star_expr                   go to state 59
    expr                        go to state 60
    xor_expr                    go to state 61
    and_expr                    go to state 62
    shift_expr                  go to state 63
    arith_expr                  go to state 64
    term                        go to state 65
    factor                      go to state 66
    factor_choice               go to state 67
    power                       go to state 68
    atom_expr                   go to state 69
    atom                        go to state 70
    STRING_PLUS                 go to state 71
    classdef                    go to state 72


State 2

   64 async_stmt: ASYNC . async_choice

    FOR  shift, and go to state 7
    DEF  shift, and go to state 13

    funcdef       go to state 74
    async_choice  go to state 75
    for_stmt      go to state 76


State 3

  145 atom: TYPE_HINT .

    $default  reduce using rule 145 (atom)


State 4

  141 atom: NAME .

    $default  reduce using rule 141 (atom)


State 5

   67 if_stmt: IF . namedexpr_test COLON suite
   68        | IF . namedexpr_test COLON suite ELSE COLON suite
   69        | IF . namedexpr_test COLON suite nts_star
   70        | IF . namedexpr_test COLON suite nts_star ELSE COLON suite

    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    NOT            shift, and go to state 8
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    namedexpr_test  go to state 77
    test            go to state 78
    or_test         go to state 53
    and_test_star   go to state 54
    and_test        go to state 55
    not_test_star   go to state 56
    not_test        go to state 57
    comparison      go to state 58
    expr            go to state 60
    xor_expr        go to state 61
    and_expr        go to state 62
    shift_expr      go to state 63
    arith_expr      go to state 64
    term            go to state 65
    factor          go to state 66
    factor_choice   go to state 67
    power           go to state 68
    atom_expr       go to state 69
    atom            go to state 70
    STRING_PLUS     go to state 71


State 6

   71 while_stmt: WHILE . namedexpr_test COLON suite
   72           | WHILE . namedexpr_test COLON suite ELSE COLON suite

    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    NOT            shift, and go to state 8
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    namedexpr_test  go to state 79
    test            go to state 78
    or_test         go to state 53
    and_test_star   go to state 54
    and_test        go to state 55
    not_test_star   go to state 56
    not_test        go to state 57
    comparison      go to state 58
    expr            go to state 60
    xor_expr        go to state 61
    and_expr        go to state 62
    shift_expr      go to state 63
    arith_expr      go to state 64
    term            go to state 65
    factor          go to state 66
    factor_choice   go to state 67
    power           go to state 68
    atom_expr       go to state 69
    atom            go to state 70
    STRING_PLUS     go to state 71


State 7

   73 for_stmt: FOR . exprlist IN testlist COLON suite
   74         | FOR . exprlist IN testlist COLON suite ELSE COLON suite

    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    MULTIPLY       shift, and go to state 23
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    star_expr               go to state 80
    expr                    go to state 81
    xor_expr                go to state 61
    and_expr                go to state 62
    shift_expr              go to state 63
    arith_expr              go to state 64
    term                    go to state 65
    factor                  go to state 66
    factor_choice           go to state 67
    power                   go to state 68
    atom_expr               go to state 69
    atom                    go to state 70
    STRING_PLUS             go to state 71
    exprlist                go to state 82
    expr_or_star_expr_list  go to state 83
    expr_or_star_expr       go to state 84


State 8

   91 not_test: NOT . not_test

    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    NOT            shift, and go to state 8
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    not_test       go to state 85
    comparison     go to state 58
    expr           go to state 60
    xor_expr       go to state 61
    and_expr       go to state 62
    shift_expr     go to state 63
    arith_expr     go to state 64
    term           go to state 65
    factor         go to state 66
    factor_choice  go to state 67
    power          go to state 68
    atom_expr      go to state 69
    atom           go to state 70
    STRING_PLUS    go to state 71


State 9

   46 break_stmt: BREAK .

    $default  reduce using rule 46 (break_stmt)


State 10

   47 continue_stmt: CONTINUE .

    $default  reduce using rule 47 (continue_stmt)


State 11

   48 return_stmt: RETURN .
   49            | RETURN . testlist_star_expr

    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    NOT            shift, and go to state 8
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    MULTIPLY       shift, and go to state 23
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    $default  reduce using rule 48 (return_stmt)

    testlist_star_expr  go to state 86
    expr_choice_list    go to state 38
    expr_choice         go to state 39
    test                go to state 52
    or_test             go to state 53
    and_test_star       go to state 54
    and_test            go to state 55
    not_test_star       go to state 56
    not_test            go to state 57
    comparison          go to state 58
    star_expr           go to state 59
    expr                go to state 60
    xor_expr            go to state 61
    and_expr            go to state 62
    shift_expr          go to state 63
    arith_expr          go to state 64
    term                go to state 65
    factor              go to state 66
    factor_choice       go to state 67
    power               go to state 68
    atom_expr           go to state 69
    atom                go to state 70
    STRING_PLUS         go to state 71


State 12

  191 classdef: CLASS . NAME COLON suite
  192         | CLASS . NAME OPEN_BRACKET CLOSE_BRACKET COLON suite
  193         | CLASS . NAME OPEN_BRACKET arglist CLOSE_BRACKET COLON suite

    NAME  shift, and go to state 87


State 13

    7 funcdef: DEF . NAME parameters COLON func_body_suite
    8        | DEF . NAME parameters ARROW_OPER TYPE_HINT COLON func_body_suite
    9        | DEF . NAME OPEN_BRACKET CLOSE_BRACKET ARROW_OPER TYPE_HINT COLON func_body_suite
   10        | DEF . NAME OPEN_BRACKET CLOSE_BRACKET COLON func_body_suite

    NAME  shift, and go to state 88


State 14

   50 global_stmt: GLOBAL . NAME
   51            | GLOBAL . NAME comma_name_star

    NAME  shift, and go to state 89


State 15

   52 nonlocal_stmt: NONLOCAL . NAME
   53              | NONLOCAL . NAME comma_name_star

    NAME  shift, and go to state 90


State 16

   54 assert_stmt: ASSERT . test
   55            | ASSERT . test comma_test

    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    NOT            shift, and go to state 8
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    test           go to state 91
    or_test        go to state 53
    and_test_star  go to state 54
    and_test       go to state 55
    not_test_star  go to state 56
    not_test       go to state 57
    comparison     go to state 58
    expr           go to state 60
    xor_expr       go to state 61
    and_expr       go to state 62
    shift_expr     go to state 63
    arith_expr     go to state 64
    term           go to state 65
    factor         go to state 66
    factor_choice  go to state 67
    power          go to state 68
    atom_expr      go to state 69
    atom           go to state 70
    STRING_PLUS    go to state 71


State 17

  144 atom: ATOM_KEYWORDS .

    $default  reduce using rule 144 (atom)


State 18

  146 STRING_PLUS: STRING .
  147            | STRING . STRING_PLUS

    STRING  shift, and go to state 18

    $default  reduce using rule 146 (STRING_PLUS)

    STRING_PLUS  go to state 92


State 19

  142 atom: NUMBER .

    $default  reduce using rule 142 (atom)


State 20

  135 atom: OPEN_BRACKET . testlist_comp CLOSE_BRACKET
  136     | OPEN_BRACKET . CLOSE_BRACKET

    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    NOT            shift, and go to state 8
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    CLOSE_BRACKET  shift, and go to state 93
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    MULTIPLY       shift, and go to state 23
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26

    namedexpr_test      go to state 94
    test                go to state 78
    or_test             go to state 53
    and_test_star       go to state 54
    and_test            go to state 55
    not_test_star       go to state 56
    not_test            go to state 57
    comparison          go to state 58
    star_expr           go to state 95
    expr                go to state 60
    xor_expr            go to state 61
    and_expr            go to state 62
    shift_expr          go to state 63
    arith_expr          go to state 64
    term                go to state 65
    factor              go to state 66
    factor_choice       go to state 67
    power               go to state 68
    atom_expr           go to state 69
    atom                go to state 70
    STRING_PLUS         go to state 71
    testlist_comp       go to state 96
    named_or_star_list  go to state 97
    named_or_star       go to state 98


State 21

  127 factor_choice: PLUS .

    $default  reduce using rule 127 (factor_choice)


State 22

  128 factor_choice: MINUS .

    $default  reduce using rule 128 (factor_choice)


State 23

  106 star_expr: MULTIPLY . expr

    TYPE_HINT      shift, and go to state 3
    NAME           shift, and go to state 4
    ATOM_KEYWORDS  shift, and go to state 17
    STRING         shift, and go to state 18
    NUMBER         shift, and go to state 19
    OPEN_BRACKET   shift, and go to state 20
    PLUS           shift, and go to state 21
    MINUS          shift, and go to state 22
    NEGATION       shift, and go to state 24
    CURLY_OPEN     shift, and go to state 25
    SQUARE_OPEN    shift, and go to state 26
